--- a/app/src/main/res/layout/activity_age.xml
+++ b/app/src/main/res/layout/activity_age.xml
@@ -11,6 +11,8 @@
         android:id="@+id/button2"
         android:layout_width="101dp"
         android:layout_height="62dp"
+        android:layout_marginStart="274dp"
+        android:layout_marginTop="190dp"
         android:layout_marginEnd="36dp"
         android:layout_marginBottom="60dp"
         android:backgroundTint="@color/green"
@@ -20,12 +22,15 @@
         android:textSize="17sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="105dp"
         android:layout_marginEnd="100dp"
         android:layout_marginBottom="428dp"
         android:fontFamily="sans-serif-black"
@@ -35,6 +40,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
         app:layout_constraintVertical_bias="0.03" />
 
@@ -57,13 +63,17 @@
         android:id="@+id/editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="158dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="176dp"
+        android:layout_marginBottom="307dp"
         android:inputType="number"
         android:text="20"
         android:textColor="#259F2A"
         android:textSize="60sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
         tools:fontFamily="sans-serif-black" />
 </androidx.constraintlayout.widget.ConstraintLayout>
