--- a/app/src/main/res/layout/activity_goal.xml
+++ b/app/src/main/res/layout/activity_goal.xml
@@ -28,12 +28,16 @@
         android:layout_height="61dp"
         android:layout_marginStart="284dp"
         android:layout_marginTop="36dp"
+        android:layout_marginEnd="19dp"
+        android:layout_marginBottom="193dp"
         android:backgroundTint="@color/white"
         android:fontFamily="sans-serif-black"
         android:text="gain"
         android:textColor="#0B0A0A"
         android:textSize="16sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/button4"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
@@ -43,12 +47,16 @@
         android:layout_height="61dp"
         android:layout_marginStart="148dp"
         android:layout_marginTop="36dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="315dp"
         android:backgroundTint="@color/white"
         android:fontFamily="sans-serif-black"
         android:text="Keep"
         android:textColor="#0B0A0A"
         android:textSize="16sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/high"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
@@ -57,13 +65,17 @@
         android:layout_width="101dp"
         android:layout_height="62dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="36dp"
+        android:layout_marginEnd="31dp"
+        android:layout_marginBottom="314dp"
         android:backgroundTint="@color/white"
         android:fontFamily="sans-serif-black"
         android:text="lose"
         android:textColor="#0B0909"
         android:textSize="17sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/med"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
